--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,4 +1,4 @@
-name: production
+name: deploy
 
 on:
   push:
@@ -67,9 +67,9 @@ jobs:
         with:
           aws_access_key: ${{secrets.ACCESS_KEY_ID}}
           aws_secret_key: ${{secrets.SECRET_ACCESS_KEY}}
-          application_name: application_name
-          environment_name: environment_name
-          region: us-east-2
+          application_name: Learning
+          environment_name: Learning-env
+          region: us-east-1
           version_label: "e-learn-${{ steps.format-time.outputs.replaced }}"
           deployment_package: deploy.zip
 
