--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -74,4 +74,4 @@ jobs:
           deployment_package: deploy.zip
 
       - name: Deployed!
-        run: echo App deployed to ELB :)
+        run: echo App deployed to ELB
